# autofarm-success-guru

./: .env.example  .gitignore  AUTOFARM_V6_IMPROVED.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml  pyproject_proxy.toml
account_manager/: __init__.py  account_setup.py  manager.py  token_refresher.py
config/: brands.json  logrotate.conf  platforms.json  settings.py  supervisord_content.conf  supervisord_proxy.conf  youtube_projects.json
database/: __init__.py  connection_pool.py  credential_manager.py  db.py  schema.sql
infrastructure/: create_compartment.sh  full_setup.ps1  full_setup.sh  network_diagram.md  security_hardening.sh  setup_proxy_vm.sh  setup_secondary_vnics.sh
jobs/: __init__.py  backup_database.py  check_auto_approvals.py  check_queue_depth.py  check_storage.py  cleanup_gdrive.py  cleanup_orphans.py  maintain_backgrounds.py  process_review_queue.py  publish_due.py  pull_analytics.py  refresh_tokens.py  refresh_user_agents.py  reoptimise_schedule.py  reset_api_quotas.py  reset_daily_counts.py  scan_and_generate.py  send_daily_digest.py  validate_config.py
modules/: __init__.py
scripts/: add_account.py  add_brand.py  approve_content.py  create_directories.py  download_fonts.py  generate_encryption_key.py  generate_squid_configs.py  init_db.py  install_cron.py  install_kokoro.py  keepalive_proxy.sh  list_accounts.py  prebuild_backgrounds.py  predownload_backgrounds.py  send_video.py  setup_content_vm.sh  setup_gdrive_auth.py  test_all_brands.py  test_pipeline.py  test_proxy_routing.py  toggle_publish_mode.py  (+1 more)
(+108 files in other folders)
